--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,11 @@ verify_ssl = true
 pylint = "*"
 pep8 = "*"
 autopep8 = "*"
+flake8 = "*"
 
 [packages]
+requests = ">=2.20.0"
+flask = ">=1.0.0"
 
 [requires]
 python_version = "3.8"
